<resources>
    <string name="app_name">Project_Narau</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Welcome_Continue">Continue</string>
    <string name="Name">Name</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Submit">Submit</string>
    <string name="Cancel">Cancel</string>
</resources>